{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 113,
  "lineage": "3a40563a-f372-cb28-bada-24317c555e06",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225989332790:security-group/sg-027496101c2420ebc",
            "description": "ALB ingress from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-027496101c2420ebc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "nutritionell-alb-sg",
            "name_prefix": "",
            "owner_id": "225989332790",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Env": "prod",
              "ManagedBy": "terraform",
              "Project": "nutritionell"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b565a0f0908de7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225989332790:security-group/sg-0567bcfd23c575396",
            "description": "Fargate tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound (ECR, Secrets, LLM API)",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0567bcfd23c575396",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "From ALB",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-027496101c2420ebc"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "nutritionell-app-sg",
            "name_prefix": "",
            "owner_id": "225989332790",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Env": "prod",
              "ManagedBy": "terraform",
              "Project": "nutritionell"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b565a0f0908de7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225989332790:security-group/sg-0a8c1f88c4ea9ec9d",
            "description": "Postgres access from app only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a8c1f88c4ea9ec9d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Postgres from app",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0567bcfd23c575396"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "nutritionell-rds-sg",
            "name_prefix": "",
            "owner_id": "225989332790",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Env": "prod",
              "ManagedBy": "terraform",
              "Project": "nutritionell"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b565a0f0908de7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.app",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225989332790:subnet/subnet-083a400ec61599c7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083a400ec61599c7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "225989332790",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nutritionell-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Env": "prod",
              "ManagedBy": "terraform",
              "Name": "nutritionell-vpc-private-us-east-1a",
              "Project": "nutritionell"
            },
            "vpc_id": "vpc-07b565a0f0908de7b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225989332790:subnet/subnet-00bb845414c7917d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00bb845414c7917d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "225989332790",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nutritionell-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Env": "prod",
              "ManagedBy": "terraform",
              "Name": "nutritionell-vpc-private-us-east-1b",
              "Project": "nutritionell"
            },
            "vpc_id": "vpc-07b565a0f0908de7b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225989332790:vpc/vpc-07b565a0f0908de7b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-093855ce3ee08bc4e",
            "default_route_table_id": "rtb-08bbd18d692230ace",
            "default_security_group_id": "sg-06a2f507a43b1945b",
            "dhcp_options_id": "dopt-0341837e94023b5c3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07b565a0f0908de7b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08bbd18d692230ace",
            "owner_id": "225989332790",
            "tags": {
              "Name": "nutritionell-vpc"
            },
            "tags_all": {
              "Env": "prod",
              "ManagedBy": "terraform",
              "Name": "nutritionell-vpc",
              "Project": "nutritionell"
            }
          }
        }
      ]
    }
  ]
}